--- a/css/estilo_menu.css
+++ b/css/estilo_menu.css
@@ -105,7 +105,7 @@ http://www.freshdesignweb.com/drop-down-responsive-menu-with-css3-and-jquery.htm
     color:#555;
 }
 #fdw nav ul li ul.sub_menu li a:hover {
-    background:#E9E9E9;
+    background:#e9e9e9;
     color:#000;
     font-weight:bold;
 }
