--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,7 +16,7 @@
 	outline: none;
         font-style: normal;
         font-weight:normal;
-        font-family: 'Roboto', sans-serif;  
+        font-family: 'Roboto', Helvetica;  
 }
 
 html{
@@ -72,7 +72,7 @@ form[role=login] {
 	}
 
 form[role=registro],form[role=consulta]{
-    font-size: 12px;
+    font-size: 13px;
 }
 
 /*ERRORES---------------------*/
@@ -135,7 +135,7 @@ a{
 }
 
 .info{
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     text-align: center;
 }
@@ -166,7 +166,6 @@ footer{
     color: #fff;
     background-color: #007fff;
     border-color: #285e8e; /*set the color you want here*/
-    font-weight: bold;
 }
 
 .panel-footer {
